--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "axios": "^1.3.6",
     "i": "^0.3.7",
     "npm": "^9.6.5",
     "react": "^18.2.0",
