--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minga_naranja_front",
+  "name": "minga_orange_front",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "axios": "^1.3.6",
-    "i": "^0.3.7",
+    "install": "^0.13.0",
     "npm": "^9.6.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
