--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "install": "^0.13.0",
     "npm": "^9.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "sweetalert2": "^11.7.5",
     "sweetalert2-react-content": "^5.0.7"
-
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
