--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "install": "^0.13.0",
+    "joi": "^17.9.2",
     "moment": "^2.29.4",
     "npm": "^9.6.5",
     "react": "^18.2.0",
