--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-tooltip": "^5.13.1",
     "sweetalert2": "^11.7.5",
     "sweetalert2-react-content": "^5.0.7"
   },
