--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.10",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "install": "^0.13.0",
